--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=AdaptationFlow
+#Datasource configuration
+spring.datasource.url=jdbc:postgresql://localhost/adapt_game
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
