--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: AdaptationFlow
 
   datasource:
-    url: jdbc:postgresql://localhost/adapt_game
+    url: jdbc:postgresql://localhost/test1
     username: postgres
     password: admin
     driver-class-name: org.postgresql.Driver
@@ -20,5 +20,5 @@ spring:
       repositories:
         enabled: true
   liquibase:
-    enabled: false
+    enabled: true
     change-log: classpath:/db/liquibase/master.xml
