--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   application:
-    name: AdaptationFlow
+    name: ${APP_NAME}
 
   datasource:
     url: jdbc:postgresql://localhost/test1
-    username: postgres
-    password: admin
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
     generate-ddl: true
