--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   application:
-    name: ${APP_NAME}
+    name: AdaptationFlow
 
   datasource:
     url: jdbc:postgresql://localhost/test1
-    username: ${POSTGRES_USER}
-    password: ${POSTGRES_PASSWORD}
+    username: postgres
+    password: admin
     driver-class-name: org.postgresql.Driver
   jpa:
     generate-ddl: true
@@ -22,3 +22,6 @@ spring:
   liquibase:
     enabled: true
     change-log: classpath:/db/liquibase/master.xml
+jwt:
+  secret: "your-256-bit-secret-your-very-long-secret-key-for-hmac"
+  expiration-ms: 3600000  # время жизни токена в миллисекундах (1 час)
