--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,18 +3,19 @@ spring:
     name: AdaptationFlow
 
   datasource:
-    url: jdbc:postgresql://localhost/test1
+    url: jdbc:postgresql://localhost:5432/db
     username: postgres
     password: admin
     driver-class-name: org.postgresql.Driver
+
   jpa:
-    generate-ddl: true
     show-sql: true
     properties:
       hibernate:
         format_sql: true
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update   # или validate, если база уже создана
+
   data:
     jpa:
       repositories:
