Revert "Refractor entity"

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,21 @@
-server:
-  port: 8081
-
 spring:
   application:
     name: AdaptationFlow
+
   datasource:
-    url: jdbc:postgresql://localhost/flow
+    url: jdbc:postgresql://localhost:5432/db
     username: postgres
     password: admin
     driver-class-name: org.postgresql.Driver
+
   jpa:
-    generate-ddl: true
     show-sql: true
     properties:
       hibernate:
         format_sql: true
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update   # или validate, если база уже создана
+
   data:
     jpa:
       repositories:
@@ -26,4 +25,10 @@ spring:
     change-log: classpath:/db/liquibase/master.xml
 jwt:
   secret: "your-256-bit-secret-your-very-long-secret-key-for-hmac"
-  expiration-ms: 3600000  # время жизни токена в миллисекундах (1 час)
+  expiration-ms: 360000000  # время жизни токена в миллисекундах (10 час)
+logging:
+  level:
+    root: INFO                 # общий уровень логов
+    com.project.adaptationflow.config.JwtAuthenticationFilter: DEBUG  # подробное логирование фильтра JWT
+    com.project.adaptationflow: DEBUG   # подробное логирование всего твоего пакета
+    org.springframework.security: INFO  # можно понизить уровень логов Spring Security, если много шума
